# auto-service-bot

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  SETUP.md  TODO.md  pyproject.toml  railway.toml
.github/workflows/: deploy-pages.yml
docs/: index.html
scripts/: migrate_admin_panel.sql  seed_db.py  seed_inbuild_shop.py  setup_supabase.sql
src/: config.py  database.py  main.py  redis_client.py
src/admin/: __init__.py  auth.py  dependencies.py  router.py
src/admin/static/: app.js  style.css
src/admin/templates/: base.html  dashboard.html  login.html
src/admin/views/: chat.py  conversations.py  dashboard.py  leads.py  pricing.py  schedule.py  settings.py
src/api/v1/: admin.py  landing.py  leads.py
src/api/webhooks/: __init__.py  telegram.py  whatsapp.py
src/bot/: __init__.py  factory.py  middleware.py
src/bot/handlers/: message.py
src/conversation/: __init__.py  engine.py  session.py
src/conversation/steps/: __init__.py  appointment.py  (+7 more)
src/landing/: index.html  router.py
src/llm/: __init__.py  client.py  generator.py  parser.py  safety.py  unified.py
src/models/: __init__.py  base.py  conversation.py  demo_request.py  device.py  lead.py  pricing.py  shop.py
src/notifications/: __init__.py  telegram.py
src/pricing/: __init__.py  engine.py
src/repositories/: lead.py
src/schemas/: __init__.py  conversation.py  lead.py  shop.py
src/whatsapp/: __init__.py  client.py  keyboard_adapter.py
tests/: conftest.py
tests/unit/: test_conversation_engine.py  test_inbuild_engine.py  test_pricing_engine.py  test_safety.py  test_state_machine.py
(+32 files in other folders)
