[project]
name = "auto-bot"
version = "0.1.0"
description = "AI-powered intake bot for independent auto repair shops"
requires-python = ">=3.9"

dependencies = [
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Telegram Bot
    "aiogram>=3.15.0",

    # WhatsApp (Twilio)
    "twilio>=9.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # LLM
    "anthropic>=0.40.0",

    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Utils
    "structlog>=24.4.0",
    "cachetools>=5.5.0",
    "httpx>=0.28.0",

    # Admin panel
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.1",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
